Remove a lot of stuff that didn't work